# agent-skills

./: README.md
auth0-terraform/: .gitignore  README.md  SKILL.md  package.json  pyproject.toml
auth0-terraform/scripts/auth0tf/: __init__.py  cli.py  emit_env.py  emit_modules.py  emit_pipeline.py  emit_readme.py  extract.py  hclgen.py  model.py  parse.py  references.py  secrets.py
auth0-terraform/tests/: test_cli_integration.py  test_emit_env.py  test_emit_modules.py  test_emit_pipeline.py  test_emit_readme.py  test_extract.py  test_hclgen.py  test_model.py  test_parse.py  test_references.py  test_secrets.py  test_terraform_validate.py
auth0-terraform/tests/fixtures/: refs_tenant.tf  simple_tenant.tf
